--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - [Your Name] Fitness</title>
+    <title>Contact - [Kamlesh Bhatt] Fitness</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">[Your Name] Fitness</a>
+            <a class="navbar-brand" href="index.html">[Kamlesh Bhatt] Fitness</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,15 +62,15 @@
                 </div>
                 <div class="text-center mt-4">
                     <h4>Or Reach Me Directly:</h4>
-                    <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                    <p><strong>Phone:</strong> [Your Phone Number]</p>
+                    <p><strong>Email:</strong> <a href="mailto:your.kamleshbhatt7764@gmail.com">your.email@example.com</a></p>
+                    <p><strong>Phone:</strong> [+91-6362866893]</p>
                 </div>
             </div>
         </div>
     </div>
 
     <footer class="bg-dark text-white text-center p-3">
-        <p>Copyright &copy; 2025 [Your Name] Fitness. All Rights Reserved.</p>
+        <p>Copyright &copy; 2025 [Kamlesh Bhatt] Fitness. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
