--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Kamlesh Bhatt] - Fitness Trainer</title>
+    <title>Kamlesh Bhatt - Fitness Trainer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">[Kamlesh Bhatt] Fitness</a>
+            <a class="navbar-brand" href="index.html">Kamlesh Bhatt Fitness</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -78,14 +78,14 @@
         <section class="testimonial-section bg-light p-5 rounded">
              <h2 class="text-center mb-4">What My Clients Say</h2>
              <blockquote class="blockquote text-center">
-                <p class="mb-3">"[Kamlesh Bhatt] completely changed my perspective on fitness. I'm stronger, more confident, and healthier than I've ever been. The best investment I ever made!"</p>
-                <footer class="blockquote-footer">[Himanshu Bhatt], <cite title="Source Title">Lost 20 lbs</cite></footer>
+                <p class="mb-3">"Kamlesh Bhatt completely changed my perspective on fitness. I'm stronger, more confident, and healthier than I've ever been. The best investment I ever made!"</p>
+                <footer class="blockquote-footer">Himanshu Bhatt, <cite title="Source Title">Lost 20 lbs</cite></footer>
             </blockquote>
         </section>
     </div>
 
     <footer class="bg-dark text-white text-center p-3">
-        <p>Copyright &copy; 2025 [Kamlesh Bhatt] Fitness. All Rights Reserved.</p>
+        <p>Copyright &copy; 2025 Kamlesh Bhatt Fitness. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
