--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - [Kamlesh Bhatt] Fitness</title>
+    <title>About Me - Kamlesh Bhatt Fitness</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">[Kamlesh Bhatt] Fitness</a>
+            <a class="navbar-brand" href="index.html">Kamlesh Bhatt Fitness</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,8 +35,8 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-md-4 text-center">
-                <img src="img/your-photo.jpg" alt="[Kamlesh Bhatt]" class="img-fluid rounded-circle mb-3">
-                <h3>[Kamlesh Bhatt]</h3>
+                <img src="img/your-photo.jpg" alt="Kamlesh Bhatt" class="img-fluid rounded-circle mb-3">
+                <h3>Kamlesh Bhatt</h3>
                 <p class="text-muted">Certified Personal Trainer</p>
             </div>
             <div class="col-md-8">
@@ -49,9 +49,9 @@
 
                 <h3 class="mt-4">My Certifications</h3>
                 <ul>
-                    <li>Certified Personal Trainer - [ACE]</li>
-                    <li>Specialist in [Strength & Conditioning, MMA, Boxing]</li>
-                    <li>[Another Certification]</li>
+                    <li>Certified Personal Trainer - ACE</li>
+                    <li>Specialist in Strength & Conditioning, MMA, Boxing</li>
+                    <li>Personal Training Course</li>
                     <li>CPR/AED Certified</li>
                 </ul>
                 <a href="contact.html" class="btn btn-primary mt-3">Start Your Journey Today</a>
@@ -60,7 +60,7 @@
     </div>
 
     <footer class="bg-dark text-white text-center p-3">
-        <p>Copyright &copy; 2025 [Kamlesh Bhatt] Fitness. All Rights Reserved.</p>
+        <p>Copyright &copy; 2025[Kamlesh Bhatt Fitness. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
